[package]
name = 'atomic-shim'
description = 'Atomic types for unsupported platforms'
version = "0.2.0"
authors = ['Bruno Tavares <connect+github@bltavares.com>']
edition = '2018'
homepage = 'https://github.com/bltavares/atomic-shim'
repository = 'https://github.com/bltavares/atomic-shim'
readme = 'README.md'
license = 'MIT OR Apache-2.0'
keywords = ['atomic', 'no_std']

[package.metadata.docs.rs]
features = ['mutex', 'std']

[features]
default = ['std']
std = ['spin/std']
mutex = ['spin']

[dependencies.spin]
version = '0.9.2'
optional = true
default-features = false
features = ['mutex', 'spin_mutex']

[target."cfg(target_arch = \"mips\")".dependencies]
spin = { version = '0.9.2', default-features = false, features = ['mutex', 'spin_mutex'] }

[target."cfg(target_arch = \"powerpc\")".dependencies]
spin = { version = '0.9.2', default-features = false, features = ['mutex', 'spin_mutex'] }
