[package]
name = 'atomic-shim'
description = 'Atomic types for unsupported platforms'
version = "0.2.0"
authors = ['Bruno Tavares <connect+github@bltavares.com>']
edition = '2018'
homepage = 'https://github.com/bltavares/atomic-shim'
repository = 'https://github.com/bltavares/atomic-shim'
readme = 'README.md'
license = 'MIT OR Apache-2.0'
keywords = ['atomic']
[package.metadata.docs.rs]
features = ['mutex']

[features]
mutex = ['crossbeam-utils']
[dependencies.crossbeam-utils]
version = '0.8'
optional = true
[target."cfg(target_has_atomic=\"64\")".dependencies]
crossbeam-utils = '0.8'
